2011-06-29  Igor Oliveira  <igor.oliveira@openbossa.org>

Reviewed by Andreas Kling.

        [Qt] GraphicsContext::clipToImageBuffer does not support scale transformation
        https://bugs.webkit.org/show_bug.cgi?id=63555

        Scale alphaMask if GraphicsContext is scaled

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::pushTransparencyLayerInternal):
        * platform/graphics/qt/ImageBufferQt.cpp:
        (WebCore::ImageBuffer::clip):

Canonical link: https://commits.webkit.org/79302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90020 268f45cc-cd09-0410-ab3c-d52691b4dbfc