Source/WebCore/platform/graphics/qt/ImageBufferQt.cpp
@@ -161,8 +161,6 @@ void ImageBuffer::clip(GraphicsContext* context, const FloatRect& floatRect) con
 
     IntRect rect = enclosingIntRect(floatRect);
     QPixmap alphaMask = *nativeImage;
-    if (alphaMask.width() != rect.width() || alphaMask.height() != rect.height())
-        alphaMask = alphaMask.scaled(rect.width(), rect.height());
 
     context->pushTransparencyLayerInternal(rect, 1.0, alphaMask);
 }
